codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
assertion_line: 233
expression: snapshot
---
Scenario: /responses POST bodies (input only, redacted like other suite snapshots)

## First request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt

## Second request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt
03:function_call/shell
04:message/assistant:first answer
05:function_call_output:unsupported call: shell
06:message/user:second prompt
